--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <body background="IMG/bg.png">
         <center>
           <div class="column">
-          <img src="IMG/renovate.png" width="320" height="64">
+          <a href="https://codebreaker.neocities.org/"> <img src="IMG/renovate.png" width="320" height="64"></a>
           </div>
           <div class="column2">
-          <h2>F.A.Q</h2>
+          <a href="https://codebreaker.neocities.org/faq.html"> <h2>F.A.Q</h2></a>
           </div>
           <div class="column2">
-          <a href="https://discord.gg/2nUUCrkqBQ"><h2>Discord</h2></a>
+          <a href="https://discord.gg/2nUUCrkqBQ"> <h2>Discord</h2></a>
           </div>
           </center>
           <br><br><br><br>
