--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <br><br><br><br>
            <center>
            <h2>The new MC Client, with Multisupport for</h2>
-           <h2>1.7.10 & 1.8.9 versions. Including an Installer.</h2>
+           <h2>1.7.10(maybe) & 1.8.9 versions. Including an Installer.</h2>
            <img src="IMG/InstallerWindow.png">
            </center>
           <br>
